# com-investing-app

./: README.md  main_page.py  pyproject.toml  requirements.txt
pages/: page_02.py
